// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render matches snapshot 1`] = `
<Fragment>
  <SubText
    text="i am subText"
  >
    <Text
      Type="h1"
      type="span"
    >
      Sign up for
    </Text>
    <Text
      Type="h1"
      type="span"
    >
      the TLC newsletter.
    </Text>
  </SubText>
  <div
    className="inputWrapper"
  >
    <TextInput
      onChange="onClick"
      placeholder="email address"
      valid={false}
      value=""
    />
    <Button
      disabled={true}
      text="Next"
    />
  </div>
  <div
    className="helperTextWrapper"
  >
    <CheckBox
      checked={false}
      onChange="onClick"
      valid={false}
    />
    <Text
      Type="h1"
      type="span"
    >
      I agree to receive information from Discovery Communications in accordance with the following
      <Link
        text="Privacy Policy"
        url="https://google.com"
      />
    </Text>
  </div>
</Fragment>
`;

exports[`render with data matches snapshot 1`] = `
<Fragment>
  <SubText
    text="i am subText"
  >
    <Text
      Type="h1"
      type="span"
    >
      Sign up for
    </Text>
    <Text
      Type="h1"
      type="span"
    >
      the TLC newsletter.
    </Text>
  </SubText>
  <div
    className="inputWrapper"
  >
    <TextInput
      onChange="onClick"
      placeholder="email address"
      valid={false}
      value="bob"
    />
    <Button
      disabled={true}
      text="Next"
    />
  </div>
  <div
    className="helperTextWrapper"
  >
    <CheckBox
      checked={true}
      onChange="onClick"
      valid={true}
    />
    <Text
      Type="h1"
      type="span"
    >
      I agree to receive information from Discovery Communications in accordance with the following
      <Link
        text="Privacy Policy"
        url="https://google.com"
      />
    </Text>
  </div>
</Fragment>
`;
